# VTB

./: README.md  init_structure.sh  readme.md  test_data.sql
front/: .gitignore  .prettierrc  README.md  index.html  package.json
front/src/: App.tsx  Layout.tsx  index.css  main.tsx
front/src/components/analyzer/: AnalysisResults.tsx  OptimizationSuggestions.tsx  QueryEditor.tsx  types.ts
front/src/entities/: QueryAnalysis.json
front/src/mock/: mockAnalyses.json  mockAnalysisResult.ts  mockData.json
front/src/pages/: Analyzer.tsx  History.tsx  Settings.tsx
pg-sql-advisor-mvp/: .env  .gitignore  README.md  pyproject.toml
pg-sql-advisor-mvp/src/: app.py  models.py
pg-sql-advisor-mvp/src/advisor/: explainer.py  feature.kind.yaml  feature_catalog.py  feature_kinds.yaml  feature_normalizer.py  risk_score.py  rule_engine.py  rules_loader.py
pg-sql-advisor-mvp/src/analyzer/: extract.py
pg-sql-advisor-mvp/src/db/: pg.py
pg-sql-advisor-mvp/src/presentation/: formatter.py
pg-sql-advisor-mvp/src/rules/ruleset-v1/: R_CAST_PREVENTS_INDEX.yaml  R_FK_MISSING_INDEX.yaml  R_FUNCTIONAL_INDEX.yaml  R_HASHAGG_SPILL.yaml  R_INDEX_ONLY_POSSIBLE.yaml  R_LIKE_LEADING_WILDCARD.yaml  R_LIKE_TRGM.yaml  R_MODULO_FILTER_NOT_SARGABLE.yaml  R_NL_NO_INNER_IDX.yaml  R_ORDER_BY_LIMIT.yaml  R_ORDER_BY_RANDOM.yaml  R_OUTDATED_STATS.yaml  R_RANGE_TIME_QUERY.yaml  R_SEQ_SCAN_BIG_TABLE.yaml  R_SORT_SPILL.yaml  R_WINDOW_NO_PARTITION_INDEX.yaml
pg-sql-advisor-mvp/tests/: test_advise_smoke.py
pg-sql-advisor-mvp/tests/golden/: in_case_01.json  out_case_01.json
