[tool.poetry]
name = "pg-sql-advisor-mvp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.5"
pyyaml = "^6.0"
jinja2 = "^3.1"
psycopg-pool = "^3.2.6"
psycopg = "^3.2.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"